--- a/indexLucila.html
+++ b/indexLucila.html
@@ -11,5 +11,6 @@
 <body>
     <h1>Hola esto es una prueba</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni velit in eveniet distinctio vitae, quidem libero ratione quaerat esse tempora voluptatibus quod nostrum tempore doloremque, quisquam molestiae ipsam impedit dolorem.</p>
+    <img src="imagen_tarea.png">
 </body>
 </html>
